--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -847,7 +847,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 
-#schedule .about-btn {
+#agenda .about-btn {
   font-family: "Raleway", sans-serif;
   font-weight: 500;
   font-size: 14px;
@@ -865,7 +865,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   border: 2px solid rgba(0, 0, 0, 0);
 }
 
-#schedule .about-btn:hover {
+#agenda .about-btn:hover {
   color: #A31F34;
   background-color:rgba(0, 0, 0, 0);
   border: 2px solid #A31F34;
@@ -1478,13 +1478,13 @@ Secondary Speakers Section
 }
 
 /*--------------------------------------------------------------
-# Schedule Section
+# agenda Section
 --------------------------------------------------------------*/
-#schedule {
+#agenda {
   padding: 60px 0 60px 0;
 }
 
-#schedule .nav-tabs {
+#agenda .nav-tabs {
   text-align: center;
   margin: auto;
   display: block;
@@ -1492,12 +1492,12 @@ Secondary Speakers Section
   margin-bottom: 30px;
 }
 
-#schedule .nav-tabs li {
+#agenda .nav-tabs li {
   display: inline-block;
   margin-bottom: 0;
 }
 
-#schedule .nav-tabs a {
+#agenda .nav-tabs a {
   border: none;
   border-radius: 50px;
   font-weight: 600;
@@ -1507,29 +1507,29 @@ Secondary Speakers Section
 }
 
 @media (max-width: 991px) {
-  #schedule .nav-tabs a {
+  #agenda .nav-tabs a {
     padding: 8px 60px;
   }
 }
 
 @media (max-width: 767px) {
-  #schedule .nav-tabs a {
+  #agenda .nav-tabs a {
     padding: 8px 50px;
   }
 }
 
 @media (max-width: 480px) {
-  #schedule .nav-tabs a {
+  #agenda .nav-tabs a {
     padding: 8px 30px;
   }
 }
 
-#schedule .nav-tabs a.active {
+#agenda .nav-tabs a.active {
   background-color: #A31F34;
   color: #191919;
 }
 
-#schedule .sub-heading {
+#agenda .sub-heading {
   text-align: center;
   font-size: 18px;
   font-style: italic;
@@ -1537,32 +1537,32 @@ Secondary Speakers Section
 }
 
 @media (min-width: 991px) {
-  #schedule .sub-heading {
+  #agenda .sub-heading {
     width: 75%;
   }
 }
 
-#schedule .tab-pane {
+#agenda .tab-pane {
   transition: ease-in-out .2s;
 }
 
-#schedule .schedule-item {
+#agenda .agenda-item {
   border-bottom: 1px solid #f0f0f0;
   padding-top: 15px;
   padding-bottom: 15px;
   transition: background-color ease-in-out 0.3s;
 }
 
-#schedule .schedule-item:hover {
+#agenda .agenda-item:hover {
   background-color:rgba(145, 33, 48, 0.1);
 }
 
-#schedule .schedule-item time {
+#agenda .agenda-item time {
   padding-bottom: 5px;
   display: inline-block;
 }
 
-#schedule .schedule-item .speaker {
+#agenda .agenda-item .speaker {
   width: 60px;
   height: 60px;
   overflow: hidden;
@@ -1571,27 +1571,27 @@ Secondary Speakers Section
   margin: 0 10px 10px 0;
 }
 
-#schedule .schedule-item .speaker img {
+#agenda .agenda-item .speaker img {
   height: 100%;
   transform: translateX(-50%);
   margin-left: 50%;
   transition: all ease-in-out 0.3s;
 }
 
-#schedule .schedule-item h4 {
+#agenda .agenda-item h4 {
   font-size: 18px;
   font-weight: 600;
   margin-bottom: 5px;
 }
 
-#schedule .schedule-item h4 span {
+#agenda .agenda-item h4 span {
   font-style: italic;
   color: #19328e;
   font-weight: normal;
   font-size: 16px;
 }
 
-#schedule .schedule-item p {
+#agenda .agenda-item p {
   font-style: italic;
   color: #000000;
   margin-bottom: 0;
@@ -2247,23 +2247,23 @@ SETTINGS
   transition: ease-in-out .2s;
 }
 
-#upcoming-events .schedule-item {
+#upcoming-events .agenda-item {
   border-bottom: 1px solid #f0f0f0;
   padding-top: 15px;
   padding-bottom: 15px;
   transition: background-color ease-in-out 0.3s;
 }
 
-#upcoming-events .schedule-item:hover {
+#upcoming-events .agenda-item:hover {
   background-color:rgba(145, 33, 48, 0.1);
 }
 
-#upcoming-events .schedule-item time {
+#upcoming-events .agenda-item time {
   padding-bottom: 5px;
   display: inline-block;
 }
 
-#upcoming-events .schedule-item .speaker {
+#upcoming-events .agenda-item .speaker {
   width: 60px;
   height: 60px;
   overflow: hidden;
@@ -2272,27 +2272,27 @@ SETTINGS
   margin: 0 10px 10px 0;
 }
 
-#upcoming-events .schedule-item .speaker img {
+#upcoming-events .agenda-item .speaker img {
   height: 100%;
   transform: translateX(-50%);
   margin-left: 50%;
   transition: all ease-in-out 0.3s;
 }
 
-#upcoming-events .schedule-item h4 {
+#upcoming-events .agenda-item h4 {
   font-size: 18px;
   font-weight: 600;
   margin-bottom: 5px;
 }
 
-#upcoming-events .schedule-item h4 span {
+#upcoming-events .agenda-item h4 span {
   font-style: italic;
   color: #19328e;
   font-weight: normal;
   font-size: 16px;
 }
 
-#upcoming-events .schedule-item p {
+#upcoming-events .agenda-item p {
   font-style: italic;
   color: #000000;
   margin-bottom: 0;
@@ -2895,23 +2895,23 @@ SETTINGS
   transition: ease-in-out .2s;
 }
 
-#spotlight .schedule-item {
+#spotlight .agenda-item {
   border-bottom: 1px solid #cad4f6;
   padding-top: 15px;
   padding-bottom: 15px;
   transition: background-color ease-in-out 0.3s;
 }
 
-#spotlight .schedule-item:hover {
+#spotlight .agenda-item:hover {
   background-color: #191919;
 }
 
-#spotlight .schedule-item time {
+#spotlight .agenda-item time {
   padding-bottom: 5px;
   display: inline-block;
 }
 
-#spotlight .schedule-item .speaker {
+#spotlight .agenda-item .speaker {
   width: 60px;
   height: 60px;
   overflow: hidden;
@@ -2920,27 +2920,27 @@ SETTINGS
   margin: 0 10px 10px 0;
 }
 
-#spotlight .schedule-item .speaker img {
+#spotlight .agenda-item .speaker img {
   height: 100%;
   transform: translateX(-50%);
   margin-left: 50%;
   transition: all ease-in-out 0.3s;
 }
 
-#spotlight .schedule-item h4 {
+#spotlight .agenda-item h4 {
   font-size: 18px;
   font-weight: 600;
   margin-bottom: 5px;
 }
 
-#spotlight .schedule-item h4 span {
+#spotlight .agenda-item h4 span {
   font-style: italic;
   color: #19328e;
   font-weight: normal;
   font-size: 16px;
 }
 
-#spotlight .schedule-item p {
+#spotlight .agenda-item p {
   font-style: italic;
   color: #152b79;
   margin-bottom: 0;
