--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -598,7 +598,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 #intro {
   width: 100%;
   height: 75vh;
-  background: url("../img/mit_bg.jpg") top center;
+  /* background: url("../img/mit_bg.jpg") top center; */
+  background: rgb(255, 210, 210) top center;
   background-size: contain;
   overflow: hidden;
   position: relative;
